--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.37 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.36 (2015-06-26)
 -----------------
 
