--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,8 @@ Change log for zeit.web
 
 - ZON-1895: column teaser
 
+- FIX: Prevent seo-slugging for video comment forms the ugly way
+
 
 1.36 (2015-06-26)
 -----------------
