--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -24,6 +24,8 @@ Change log for zeit.web
 
 - FIX: Prevent seo-slugging for video comment forms the ugly way
 
+- FIX: Encode non-ascii URLs as utf-8 (e.g. for reach, comments)
+
 
 1.36 (2015-06-26)
 -----------------
