--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -24,6 +24,8 @@ Change log for zeit.web
 
 - FIX: Prevent seo-slugging for video comment forms the ugly way
 
+- FIX: Ignore authors without display_name instead of crashing
+
 
 1.36 (2015-06-26)
 -----------------
