--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -30,6 +30,14 @@ Change log for zeit.web
 
 - FIX: Ignore authors without display_name instead of crashing
 
+- ZON-1809: Galleries have now adc level3 empty
+
+- ZON-1907: update adc signature
+
+- ZON-1915: fix ad tile 5 in articles
+
+- ZON-1921: add keywords to adc code
+
 
 1.36 (2015-06-26)
 -----------------
