--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,8 @@ Change log for zeit.web
 
 - ZON-1505: Make centerpage teaser clickable en bloc
 
+- ZON-1788: Apply snazzy tuple stream byline to teasers and articles
+
 - ZON-1888/1889: improve mobile teaser images
 
 - ZON-1895: column teaser
