--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.38 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.37 (2015-07-06)
 -----------------
 
