--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ Change log for zeit.web
 1.38 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- BUG-287: Don't keep on trying to retrieve additional teasers when there
+  simply are no more.
 
 
 1.37 (2015-07-06)
