ZON-1822: change changes

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.39 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- ZON-1822: Re-work teaser for blogs, series and columns
 
 
 1.38 (2015-07-08)
