--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Change log for zeit.web
 1.37.2 (unreleased)
 -------------------
 
+- ZON-1581: Integrate Meetrics into Beta
+
 - ZON-1829: HP Foto-Gallerie-Teaser / Style und das Frontend
 
 
