--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.41 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- HOTFIX: Re-Release w/ freshly grunted files
 
 
 1.40 (2015-07-09)
