--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.40.2 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.40.1 (2015-07-09)
 -------------------
 
