--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.42 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.41 (2015-07-14)
 -----------------
 
