--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ Change log for zeit.web
 
 - Nothing changed yet.
 
+- ZON-1810: strip special characters from level-strings in adcontroller
+
 
 1.41 (2015-07-14)
 -----------------
