--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -12,6 +12,8 @@ Change log for zeit.web
 
 - ZON-1810: strip special characters from level-strings in adcontroller
 
+- ZON-1979: Verpixelung Momentaufnahme
+
 
 1.41 (2015-07-14)
 -----------------
