--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,6 +14,8 @@ Change log for zeit.web
 
 - ZON-1979: Verpixelung Momentaufnahme
 
+- ZON-1963: Verpixelung Back 2 top
+
 
 1.41 (2015-07-14)
 -----------------
