--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -32,6 +32,8 @@ Change log for zeit.web
 
 - ZON-1962: Verpixelung Logos
 
+- DEV-801: Support article templates everywhere, not just ZMO
+
 
 1.41 (2015-07-14)
 -----------------
