--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.43 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.42 (2015-07-23)
 -----------------
 
