--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.43 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- FIX: Repair a couple of moot assertions in tests
 
 
 1.42 (2015-07-23)
