--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.44 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.43 (2015-07-27)
 -----------------
 
