HOTFIX: Update changes

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.44 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- HOTFIX: Use relative font path to tolerate optional asset prefix [zmo-assets]
 
 
 1.43 (2015-07-27)
