FIX: Make fallback for video images more robust.
* Handle video_still or thumbnail being None
  (which shouldn't happen but still does sometimes, especially for older videos)
* Handle the fallback image not existing
* Move image loading code to LocalVideoImage class which hopefully improves readability

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -16,6 +16,8 @@ Change log for zeit.web
 
 - FIX: Ignore authors without display_name instead of crashing
 
+- FIX: Make fallback for video images more robust.
+
 
 1.44 (2015-07-28)
 -----------------
