--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,8 @@ Change log for zeit.web
 
 - ZON-1934: News Overview
 
+- ZON-1913: Umziehen tile_12 von "vor dem Video" nach "nach der ersten Duo-Region"
+
 
 1.44 (2015-07-28)
 -----------------
