--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.46 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.45.1 (2015-07-29)
 -------------------
 
