--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ Change log for zeit.web
 
 - ZON-1881: Eventverpixelung Artikel
 
+- ZON-1665: Eventverpixelung Parkett-Meta
+
 
 1.45.1 (2015-07-29)
 -------------------
