--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.48 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.47 (2015-07-30)
 -----------------
 
