--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,10 @@ Change log for zeit.web
 1.49 (unreleased)
 -----------------
 
+- ZON-1817: Adjust ZON footer lineheight
+
+- ZON-1816: Scroll footer into view
+
 - Fix: Add forgotten header tags tracking
 
 
