HOTFIX: Handle articles without authors
Note that `authorships` is not a required field, since e.g. dpa
articles don't have an author.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ Change log for zeit.web
 
 - HOTFIX: Handle umlauts in topicpage breadcrumbs
 
+- HOTFIX: Handle articles without authors
+
 - ZON-1999: Bottom-align small column teaser image
 
 
