--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,8 @@ Change log for zeit.web
 
 - FIX: Re-enable profiling of default area template
 
+- ZON-1965: Verpixelung Printbox und Angebotsbox
+
 
 1.49 (2015-08-04)
 -----------------
