--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+2.0.0 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 1.50 (2015-08-04)
 -----------------
 
