--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,6 +14,8 @@ Change log for zeit.web
 
 - ZON-1965: Verpixelung Printbox und Angebotsbox
 
+- FIX: Ensure article pages without divisions can be rendered
+
 
 1.50 (2015-08-04)
 -----------------
