--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.52 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.51 (2015-08-06)
 -----------------
 
