--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.52 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- ZON-1973: Add markdown module for centerpages
 
 
 1.51 (2015-08-06)
