ZON-1997: Change changes

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.52 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- ZON-1997: The very last article footer polishing part two
 
 
 1.51 (2015-08-06)
