ZON-2010: change CHANGES

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.53 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- ZON-2010: Fullwidth teaser: use 16:9 image variant on mobile
 
 
 1.52 (2015-08-07)
