--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.53 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- ZON-1970: Display teaser byline, date and commentcount in one line
 
 
 1.52 (2015-08-07)
