--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.54 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.53 (2015-08-10)
 -----------------
 
