--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.54 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- FIX: Be more tolerant of broken/invalid author references
 
 
 1.53 (2015-08-10)
