--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.56 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- MAINT: Drop repoze.vhm dependency
 
 
 1.55 (2015-08-12)
