Back to development: 1.58

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.58 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.57 (2015-08-12)
 -----------------
 
