--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.58 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- ZON-2023: Prevent jumping on load via reserved image heights
 
 
 1.57 (2015-08-12)
