--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ Change log for zeit.web
 
 - ZON-2031: Never ever ever ever cache comment-form
 
+- PERF: Try to resolve ICMSContent without traversal
+
 
 1.57 (2015-08-12)
 -----------------
