--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.59 (unreleased)
+-----------------
+
+- Nothing changed yet.
+
+
 1.58 (2015-08-13)
 -----------------
 
