--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.59 (unreleased)
 -----------------
 
-- Nothing changed yet.
+- PERF: Log memory usage per request
 
 
 1.58 (2015-08-13)
