--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -22,6 +22,10 @@ Change log for zeit.web
 
 - FIX: Ignore nonexistent gallery references in article body
 
+- FIX: Paddings for newsticker, servicebox and gallery
+
+- SEO: Send 301 (not 303) for video page redirects
+
 
 1.58 (2015-08-13)
 -----------------
