--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,9 @@ Change log for zeit.web
 1.59 (unreleased)
 -----------------
 
-- ZON-1932: Video als Aufmacher oder kleiner Teaser / Icon für Video-Teaser auf CPs
+- ZON-1932: Video als Aufmacher oder kleiner Teaser
+  Icon für Video-Teaser auf CPs
+
 - ZON-2000: Retraverse dynamic-cps to allow for pagination rules to apply
 
 - ZON-2012: Refactor printbox to be RAM-style module
