Back to development: 1.60.0

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.60.0 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.59.1 (2015-08-17)
 -------------------
 
