--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -15,6 +15,8 @@ Change log for zeit.web
 
 - MAINT: Log memory usage to separate log file
 
+- FIX: provide closest_substitute_image for zon-column
+
 
 1.59.1 (2015-08-17)
 -------------------
