--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -10,6 +10,8 @@ Change log for zeit.web
 
 - MAINT: Log memory usage to separate log file
 
+- ZON-2057: character counter above the form field
+
 
 1.59.1 (2015-08-17)
 -------------------
