--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -15,6 +15,8 @@ Change log for zeit.web
 
 - MAINT: Log memory usage to separate log file
 
+- IMPROVEMENT: tracking-information for schwerpunkte in articlebottom
+
 
 1.59.1 (2015-08-17)
 -------------------
