--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,15 +7,15 @@ Change log for zeit.web
 - ZON-1943: Adapt classifieds: new xml values, make font taller,
   put ellipsis to mobile view
 
-- FIX: make Spiele in navigation visible again
+- FIX: Make Spiele in navigation visible again
+
+- FIX: Adapt navi classifieds test
 
 - IMPROVEMENT: Schlagworte Verpixelung on articlebottom
 
 - MAINT: Create properly jinja'fied tracebacks for template errors
 
 - MAINT: Log memory usage to separate log file
-
-- FIX: adapt navi classifieds test
 
 
 1.59.1 (2015-08-17)
