--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -26,6 +26,8 @@ Change log for zeit.web
 
 - FIX: provide closest_substitute_image for zon-column
 
+- REVERT: FIX: provide closest_substitute_image for zon-column
+
 - IMPROVEMENT: Schlagworte Verpixelung on articlebottom
 
 - MAINT: Create properly jinja'fied tracebacks for template errors
