--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.60.1 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.60.0 (2015-08-24)
 -------------------
 
