--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -16,6 +16,8 @@ Change log for zeit.web
 
 - ZON-2050: Do not load hidden images
 
+- ZON-2062: Migrate video and sharinge images to new image server
+
 - FIX: iqd sitebar should not again be seen on mobile
 
 
