--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Change log for zeit.web
 1.60.1 (unreleased)
 -------------------
 
+- MAINT: Polish square teaser, topic teaser, column byline and button
+
 - ZON-2034: Bring back images for dynamic ranking areas
 
 - ZON-2129: integrate former noindex rules from XSLT
