--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Change log for zeit.web
 1.60.1 (unreleased)
 -------------------
 
+- ZON-2080: hide cp2015 ending in sharing data
+
 - ZON-2034: Bring back images for dynamic ranking areas
 
 - ZON-2129: integrate former noindex rules from XSLT
