--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Change log for zeit.web
 =======================
 
+1.61.2 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.61.1 (2015-08-27)
 -------------------
 
