--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.61.2 (unreleased)
 -------------------
 
-- IMPROVEMENT: Add styles and scripts for Datenjourmalismus
+- ZON-2121: Add styles and scripts for Datenjournalismus
 
 
 1.61.1 (2015-08-27)
