--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Change log for zeit.web
 1.61.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- ZON-2002: Include cards from espi-be via esi
 
 
 1.61.1 (2015-08-27)
